--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Daohui1.Github.Io</title>
-  <base href="/">
+  <base href="web">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.7efc58eada1f71a09c82.bundle.js"></script><script type="text/javascript" src="polyfills.49c2b20dcff711ca8d04.bundle.js"></script><script type="text/javascript" src="vendor.66c9ce110c62cd21f8f2.bundle.js"></script><script type="text/javascript" src="main.daff61d7cb04f71dd401.bundle.js"></script></body>
 </html>
